java 8 cleanup of FoodTruckStopService part 1